Updated content/schema (uSync)
for both v8 and v9 test sites

--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-data-list.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-data-list.config
@@ -36,7 +36,9 @@
 ]]]></Value>
     </dataListEnumeration>
     <dataListFileSystem>
-      <Value><![CDATA[~/umbraco/lib/ace-builds/src-min-noconflict/mode-xml.js]]></Value>
+      <Value><![CDATA[[
+  "~/umbraco/lib/ace-builds/src-min-noconflict/mode-xml.js"
+]]]></Value>
     </dataListFileSystem>
     <dataListJson>
       <Value><![CDATA[value3]]></Value>
@@ -48,10 +50,15 @@
 ]]]></Value>
     </dataListLanguages>
     <dataListNumberRange>
-      <Value><![CDATA[5]]></Value>
+      <Value><![CDATA[[
+  "5"
+]]]></Value>
     </dataListNumberRange>
     <dataListSql>
-      <Value><![CDATA[cmsDictionary]]></Value>
+      <Value><![CDATA[[
+  "cmsTags",
+  "cmsMacro"
+]]]></Value>
     </dataListSql>
     <dataListTimeZones>
       <Value><![CDATA[[
