--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -23,5 +23,8 @@
   "website": "https://github.com/sponsors/leekelleher"
 }]]></Value>
     </textboxList>
+    <textInput>
+      <Value><![CDATA[Hello world]]></Value>
+    </textInput>
   </Properties>
 </Content>
