--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataNumberRange.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataNumberRange.config
@@ -20,11 +20,16 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TemplatedListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "showDescriptions": "1",
-        "showIcons": "1",
-        "allowClear": "0"
+        "template": "<div class=\"w4 img-polaroid\" style=\"background-color:inherit;padding:10px 5px;\" ng-bind=\"item.name\"></div>",
+        "allowClear": "0",
+        "htmlAttributes": [
+          {
+            "name": "class",
+            "value": "umb-property-editor--limit-width flex flex-wrap justify-between"
+          }
+        ]
       }
     }
   ]
