--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataSQL.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataSQL.config
@@ -18,11 +18,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TagsDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "showDescriptions": "1",
-        "showIcons": "1",
-        "allowClear": "0"
+        "showIcons": "0",
+        "allowClear": "1",
+        "confirmRemoval": "1"
       }
     }
   ]
