--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentTextInputHeading.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentTextInputHeading.config
@@ -7,8 +7,9 @@
   </Info>
   <Config><![CDATA[{
   "placeholderText": "Enter heading...",
-  "autocomplete": "0",
+  "items": [],
   "maxChars": 150,
-  "items": []
+  "autocomplete": "0",
+  "spellcheck": "0"
 }]]></Config>
 </DataType>
