--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -50,6 +50,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>948eecc7-8ea2-4fe3-b5fb-8c9259f9a06d</Key>
+      <Name>Text Input</Name>
+      <Alias>textInput</Alias>
+      <Definition>f560933e-d476-4157-b512-0971342619cb</Definition>
+      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="textboxes">Textboxes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
