--- a/src/Umbraco.Cms.9.x/uSync/v9/DataTypes/ContentmentDataListDataFileSystem.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/DataTypes/ContentmentDataListDataFileSystem.config
@@ -19,11 +19,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.CheckboxListDataListEditor, Umbraco.Community.Contentment",
       "value": {
+        "checkAll": "1",
         "showDescriptions": "1",
-        "showIcons": "1",
-        "allowClear": "0"
+        "showIcons": "1"
       }
     }
   ]
