[WIP] ContentBlocks - Reusable Content

--- a/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentContentBlocksContent.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentContentBlocksContent.config
@@ -33,7 +33,33 @@
       }
     }
   ],
-  "enableFilter": "0",
+  "reusableContent": [
+    {
+      "key": "reusableContent",
+      "value": {
+        "name": "Banners",
+        "description": "Select from the repository of advert banners",
+        "icon": "icon-billboard color-indigo",
+        "parentNode": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc",
+        "nameTemplate": "{{ udi | ncNodeName }}",
+        "overlaySize": "small",
+        "enablePreview": "0"
+      }
+    },
+    {
+      "key": "reusableContent",
+      "value": {
+        "name": "Testimonials",
+        "description": "Select an existing testimonial",
+        "icon": "icon-quote color-purple",
+        "parentNode": "umb://document/9772aed63d82474e9269f7f4c5504992",
+        "nameTemplate": "{{ udi | ncNodeName }}",
+        "overlaySize": "small",
+        "enablePreview": "0"
+      }
+    }
+  ],
+  "enableFilter": "1",
   "disableSorting": "0",
   "enableDevMode": "1"
 }]]></Config>
