--- a/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
@@ -33,6 +33,32 @@
       }
     }
   ],
+  "reusableContent": [
+    {
+      "key": "reusableContent",
+      "value": {
+        "name": "Something",
+        "description": "This is an example",
+        "icon": "icon-burn color-black",
+        "parentNode": "umb://document/9947dd3d9ece4cb7b955434685f8ee35",
+        "nameTemplate": "{{ udi | ncNodeName }}",
+        "overlaySize": "small",
+        "enablePreview": "0"
+      }
+    },
+    {
+      "key": "reusableContent",
+      "value": {
+        "name": "Something else",
+        "description": "This is another example",
+        "icon": "icon-science color-black",
+        "parentNode": "umb://document/9feca2f2189a426db1f27e2bdee812cc",
+        "nameTemplate": "{{ udi | ncNodeName }}",
+        "overlaySize": "small",
+        "enablePreview": "0"
+      }
+    }
+  ],
   "enableFilter": "0",
   "disableSorting": "0",
   "enableDevMode": "1"
