--- a/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/something.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/something.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="356dd1f4-e0f9-4cbd-8646-af46aa7c6f16" Alias="repositoryContainer" Level="2">
+<ContentType Key="3958f7b4-5012-4d3c-b459-288dc7fded6d" Alias="something" Level="2">
   <Info>
-    <Name>Repository Container</Name>
-    <Icon>icon-server-alt color-indigo</Icon>
+    <Name>Something</Name>
+    <Icon>icon-burn color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,15 +14,12 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>%5bContainers%5d</Folder>
+    <Folder>%5bData%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
   </Info>
-  <Structure>
-    <ContentType Key="f36eabd5-e432-498f-979d-c5a80e12cdcc" SortOrder="0">somethingContainer</ContentType>
-    <ContentType Key="457a89be-3106-48c4-b8ed-2d5b9c31c279" SortOrder="1">somethingElseContainer</ContentType>
-  </Structure>
+  <Structure />
   <GenericProperties />
   <Tabs />
 </ContentType>
