--- a/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/somethingelsecontainer.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/somethingelsecontainer.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="356dd1f4-e0f9-4cbd-8646-af46aa7c6f16" Alias="repositoryContainer" Level="2">
+<ContentType Key="457a89be-3106-48c4-b8ed-2d5b9c31c279" Alias="somethingElseContainer" Level="2">
   <Info>
-    <Name>Repository Container</Name>
-    <Icon>icon-server-alt color-indigo</Icon>
+    <Name>Something Else Container</Name>
+    <Icon>icon-science color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -20,8 +20,7 @@
     <AllowedTemplates />
   </Info>
   <Structure>
-    <ContentType Key="f36eabd5-e432-498f-979d-c5a80e12cdcc" SortOrder="0">somethingContainer</ContentType>
-    <ContentType Key="457a89be-3106-48c4-b8ed-2d5b9c31c279" SortOrder="1">somethingElseContainer</ContentType>
+    <ContentType Key="ff50522a-1e06-471d-903b-f19a2187b083" SortOrder="0">somethingElse</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
