Templated Label editor - cloned config items
So not to mutate the references of the config items.
This was impacting the Data List preview JSON feature.

--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataUserDefined.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataUserDefined.config
@@ -36,11 +36,16 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TemplatedListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "showDescriptions": "1",
-        "showIcons": "1",
-        "allowClear": "0"
+        "template": "<div class=\"umb-action w5\">\r\n    <a class=\"umb-action-link\" ng-click=\"vm.changed(item)\">\r\n        <i class=\"large icon\" ng-class=\"item.icon || 'icon-document'\"></i>\r\n        <span class=\"menu-label\">\r\n            <span ng-bind=\"item.name\"></span>\r\n            <small ng-bind=\"item.description\"></small>\r\n        </span>\r\n    </a>\r\n</div>",
+        "allowClear": "1",
+        "htmlAttributes": [
+          {
+            "name": "class",
+            "value": "umb-actions umb-actions-child"
+          }
+        ]
       }
     }
   ]
