--- a/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
+++ b/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
@@ -10,8 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
-        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc1" />
-        <PackageReference Include="uSync" Version="10.0.0-alpha001.20220314.1" />
+        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc2" />
+        <PackageReference Include="uSync" Version="10.0.0-beta1" />
         <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2" />
     </ItemGroup>
 
