--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ build/assets/
 build/build-push-nuget.ps1
 build/build-push-umb.ps1
 src/packages/*/**
+src/Umbraco.Cms.10.x/appsettings-schema.json
 src/Umbraco.Cms.8.x/App_Data/*
 src/Umbraco.Cms.*.x/App_Plugins/*/**
 src/Umbraco.Cms.8.x/Umbraco/*
