Further testing on Umbraco v10-rc4

--- a/src/Umbraco.Cms.10.x/appsettings.Development.json
+++ b/src/Umbraco.Cms.10.x/appsettings.Development.json
@@ -20,7 +20,7 @@
     "Umbraco": {
         "CMS": {
             "Content": {
-                "MacroErrors": "Inline"
+                "MacroErrors": "Throw"
             },
             "Global": {
                 "Id": "00000000-0000-0000-0000-000000000000",
@@ -38,8 +38,8 @@
                 "ModelsMode": "SourceCodeManual"
             },
             "RuntimeMinification": {
-                "useInMemoryCache": true,
-                "cacheBuster": "Timestamp"
+                "UseInMemoryCache": true,
+                "CacheBuster": "Timestamp"
             },
             "Unattended": {
                 "UpgradeUnattended": true,
