--- a/src/Umbraco.Cms.10.x/appsettings.json
+++ b/src/Umbraco.Cms.10.x/appsettings.json
@@ -1,32 +1,33 @@
 {
-  "$schema": "./appsettings-schema.json",
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Warning"
-      }
-    }
-  },
-  "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite"
-  },
-  "Umbraco": {
-    "CMS": {
-      "Hosting": {
-        "Debug": false
-      },
-      "Content": {
-        "ContentVersionCleanupPolicy": {
-          "EnableCleanup": true
+    "$schema": "./appsettings-schema.json",
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information",
+                "System": "Warning"
+            }
         }
-      },
-      "Global": {
-        "Id": "00000000-0000-0000-0000-000000000000"
-      }
+    },
+    "ConnectionStrings": {
+        "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+        "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite"
+    },
+    "Umbraco": {
+        "CMS": {
+            "Global": {
+                "Id": "00000000-0000-0000-0000-000000000000",
+                "SanitizeTinyMce": true
+            },
+            "Hosting": {
+                "Debug": false
+            },
+            "Content": {
+                "ContentVersionCleanupPolicy": {
+                    "EnableCleanup": true
+                }
+            }
+        }
     }
-  }
 }
