uSync - Clean Export (for v10)
+ regenerated models

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-notes.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-notes.config
@@ -13,6 +13,9 @@
     <Template Key="b8626a7a-ccf6-4e0d-923c-23d7086a78c8">testNotesPage</Template>
   </Info>
   <Properties>
+    <editorNotes>
+      <Value><![CDATA[]]></Value>
+    </editorNotes>
     <notesRichText>
       <Value><![CDATA[]]></Value>
     </notesRichText>
