--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/calltoactionblock.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/calltoactionblock.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Blocks</Folder>
     <Compositions>
       <Composition Key="0b308cde-6352-4fe0-ba6e-6fe4a8a94199">componentHeadingProperty</Composition>
