--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/componentcoderenderpositionproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/componentcoderenderpositionproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>9aba0add-6c2a-4216-ae3f-5895033b1b5e</Key>
       <Caption>Code</Caption>
       <Alias>code</Alias>
       <Type>Group</Type>
