--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/componentcodesnippetproperties.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/componentcodesnippetproperties.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -51,6 +56,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>a9bfadc5-1fa8-4782-93e9-fe020fc35c46</Key>
       <Caption>Code</Caption>
       <Alias>code</Alias>
       <Type>Group</Type>
