--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/footersettings.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/footersettings.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bSettings%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>64c43416-bedc-4725-9534-52f6d227672d</Key>
       <Caption>Footer</Caption>
       <Alias>footer</Alias>
       <Type>Group</Type>
