--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/htmlembedblock.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/htmlembedblock.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Blocks</Folder>
     <Compositions>
       <Composition Key="6ecf8041-c594-4e95-9a0c-6ed98f99bbc2">componentCodeSnippetProperties</Composition>
