--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/jsmodule.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/jsmodule.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bModules%5d</Folder>
     <Compositions>
       <Composition Key="9c4bf75b-45ee-465c-acca-fa0b916974f3">componentCodeRenderPositionProperty</Composition>
