--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pageintroproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pageintroproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>1438ebc6-ba24-446e-aef7-c6019fdb5c84</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
