--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagenavigationinternalredirectproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagenavigationinternalredirectproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>39f80c69-1efb-4bb1-a6de-e66f5a0ee4cd</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
