--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagetagsproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagetagsproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>3fb2985c-bde4-409f-ad45-4b0e1d82bcdd</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
