--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/rootcontainer.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/rootcontainer.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bContainers%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -38,6 +43,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>25d73257-234e-48b6-b01b-67be9c3f746b</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
