--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions />
     <DefaultTemplate>testDataListPage</DefaultTemplate>
@@ -485,60 +490,70 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>7ac06f5e-b75b-4bc8-b7f3-2dfc308b9b79</Key>
       <Caption>.NET</Caption>
       <Alias>neT</Alias>
       <Type>Tab</Type>
       <SortOrder>0</SortOrder>
     </Tab>
     <Tab>
+      <Key>24fdf112-4b2d-43fb-bc28-20f8a25fd76e</Key>
       <Caption>XML Sitemap</Caption>
       <Alias>web/xmlSitemap</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
     </Tab>
     <Tab>
+      <Key>e5fa80b2-6a8e-4a66-baea-aa1d77958813</Key>
       <Caption>Data</Caption>
       <Alias>data</Alias>
       <Type>Tab</Type>
       <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
+      <Key>8ffce47b-221d-485e-85a0-fe546af42a01</Key>
       <Caption>Content</Caption>
       <Alias>umbraco/content</Alias>
       <Type>Group</Type>
       <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
+      <Key>33c054ee-fb93-49fa-8e4b-29b152197870</Key>
       <Caption>Umbraco</Caption>
       <Alias>umbraco</Alias>
       <Type>Tab</Type>
       <SortOrder>2</SortOrder>
     </Tab>
     <Tab>
+      <Key>25a826a1-7b37-4ceb-b4c5-0338c33018e5</Key>
       <Caption>Media</Caption>
       <Alias>umbraco/media</Alias>
       <Type>Group</Type>
       <SortOrder>2</SortOrder>
     </Tab>
     <Tab>
+      <Key>90d4b3a1-cf83-4e40-a222-e83c8dbe1533</Key>
       <Caption>Members</Caption>
       <Alias>umbraco/members</Alias>
       <Type>Group</Type>
       <SortOrder>2</SortOrder>
     </Tab>
     <Tab>
+      <Key>ab67c919-c5bf-4b10-8084-941329f8c90d</Key>
       <Caption>Web</Caption>
       <Alias>web</Alias>
       <Type>Tab</Type>
       <SortOrder>3</SortOrder>
     </Tab>
     <Tab>
+      <Key>0e67acd3-3332-48bd-990f-0e4bdf540831</Key>
       <Caption>Users</Caption>
       <Alias>umbraco/users</Alias>
       <Type>Group</Type>
       <SortOrder>3</SortOrder>
     </Tab>
     <Tab>
+      <Key>6fa43954-a287-4433-a3be-bb2087941f7e</Key>
       <Caption>Schema</Caption>
       <Alias>umbraco/schema</Alias>
       <Type>Group</Type>
