--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions />
     <DefaultTemplate>testMiscPage</DefaultTemplate>
@@ -53,6 +58,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>73c9dae5-5ee7-4392-807a-7f7469dc8a8d</Key>
       <Caption>Textboxes</Caption>
       <Alias>textboxes</Alias>
       <Type>Tab</Type>
