--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testnotespage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testnotespage.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions />
     <DefaultTemplate>testNotesPage</DefaultTemplate>
@@ -85,18 +90,21 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>b10178b5-7bc4-4b7d-8c10-d14d031d6531</Key>
       <Caption>Notes</Caption>
       <Alias>notes</Alias>
       <Type>Tab</Type>
       <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
+      <Key>dc9ccca5-d7a5-44e8-b0b9-d6ef0a5a03c7</Key>
       <Caption>Render Macro</Caption>
       <Alias>renderMacro</Alias>
       <Type>Tab</Type>
       <SortOrder>20</SortOrder>
     </Tab>
     <Tab>
+      <Key>265922fc-cd29-4177-a7e0-30e172523e03</Key>
       <Caption>Templated Label</Caption>
       <Alias>templatedLabel</Alias>
       <Type>Tab</Type>
