--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/headersettings.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/headersettings.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bSettings%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>1b3ea668-e729-4758-83ee-5ab84d817840</Key>
       <Caption>Header</Caption>
       <Alias>header</Alias>
       <Type>Group</Type>
