--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/homepage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/homepage.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
       <Composition Key="189438e2-a3e1-4e2f-aa4b-3f4179c3889e">pageBlocksProperty</Composition>
