--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagenavigationinvisibleredirectproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/pagenavigationinvisibleredirectproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>6f07654a-d897-4de3-98d2-4699d82f5f86</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
