--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/sitemodulesproperty.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/sitemodulesproperty.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -35,6 +40,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>7928c405-5ace-4eaa-9389-aacf0bd997e2</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
