--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/sitenavigationproperties.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/sitenavigationproperties.config
@@ -9,6 +9,11 @@
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
+    <HistoryCleanup>
+      <PreventCleanup>False</PreventCleanup>
+      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
+      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
+    </HistoryCleanup>
     <Folder>%5bCompositions%5d</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -51,6 +56,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>6aecf5b1-8814-4e89-8473-21889df07b4f</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
