Reviewed Umbraco dependencies
- Bumped v10 to latest v10.0.0-rc5
- Lowered v8 back to v8.17.0 (as not relying on anything in v8.18)

--- a/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
+++ b/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
         <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc4" />
-        <PackageReference Include="uSync" Version="10.0.0-beta1" />
+        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc5" />
+        <PackageReference Include="uSync" Version="10.0.0-rc5" />
         <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj" />
     </ItemGroup>
 
